--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -10,6 +10,7 @@
 	 	<h2>Take Notes</h2>
 	 	<p>Coding Work Log</p>
 	 	<p>Some note text</p>
+	 	<button>Create Note</button>
 	 </body>
 	  <script src="notes-app.js"></script>
 	</html> 
