--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -11,6 +11,7 @@
 	 	<p>Coding Work Log</p>
 	 	<p>Some note text</p>
 	 	<button>Create Note</button>
+	 	<button>Remove All Notes</button>
 	 </body>
 	  <script src="notes-app.js"></script>
 	</html> 
