--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -4,6 +4,8 @@
     <head></head>
     <body>
         <h1>Todos</h1>
+        
+        <button>Create Todo</button>
         <script src="todo-app.js"></script>
     </body>
 </html>
