--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -8,10 +8,10 @@
 	 <body>
 	 	<h1>Notes App</h1>
 	 	<h2>Take Notes</h2>
-	 	<p>Coding Work Log</p>
-	 	<p>Some note text</p>
-	 	<button>Create Note</button>
-	 	<button>Remove All Notes</button>
+	 	<p class="note">Coding Work Log</p>
+	 	<p class="note">Some note text</p>
+	 	<button id="create-note">Create Note</button>
+	 	<button id="remove-all">Remove All Notes</button>
 	 </body>
 	  <script src="notes-app.js"></script>
 	</html> 
