--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -3,9 +3,9 @@
 <html>
     <head></head>
     <body>
-        <h1>Todos</h1>
-        
-        <button>Create Todo</button>
+        <h1 class="todo">Todos</h1>
+        <input id="new-todo-text" type="text" placeholder="Enter something to do">
+        <button id="create-todo">Create Todo</button>
         <script src="todo-app.js"></script>
     </body>
 </html>
