--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -8,6 +8,7 @@
 	 <body>
 	 	<h1>Notes App</h1>
 	 	<h2>Take Notes</h2>
+	 	<input id="search-text" type="text" placeholder="Filter todos">
 	 	<p class="note">Coding Work Log</p>
 	 	<p class="note">Some note text</p>
 	 	<button id="create-note">Create Note</button>
