--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -9,8 +9,9 @@
 	 	<h1>Notes App</h1>
 	 	<h2>Take Notes</h2>
 	 	<input id="search-text" type="text" placeholder="Filter todos">
-	 	<p class="note">Coding Work Log</p>
-	 	<p class="note">Some note text</p>
+	 	<div id="notes">
+	 		
+	 	</div>
 	 	<button id="create-note">Create Note</button>
 	 	<button id="remove-all">Remove All Notes</button>
 	 </body>
