--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -6,6 +6,8 @@
         <h1 class="todo">Todos</h1>
         <input id="new-todo-text" type="text" placeholder="Enter something to do">
         <button id="create-todo">Create Todo</button>
+        <input id="search-text" type="text" placeholder="Filter todos">
+        <div id="todos"></div>
         <script src="todo-app.js"></script>
     </body>
 </html>
