--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -8,9 +8,18 @@
 	 <body>
 	 	<h1>Notes App</h1>
 	 	<h2>Take Notes</h2>
-	 	<input id="search-text" type="text" placeholder="Filter todos">
+	 	<label>
+	 	  Search: <input id="search-text" type="text" placeholder="Filter notes">
+	    </label>
 	 	<div id="notes"></div>
 	 	<button id="create-note">Create Note</button>
+	 	<!-- <form id="name-form">
+	 		<input type="text" placeholder="First name" name="firstName">
+	 		<button>Submit</button>
+	 	</form> -->
+	 	<label>
+	 		<input id="for-fun"  type="checkbox"> Check me for fun
+	 	</label>
 	 	
 	 </body>
 	  <script src="notes-app.js"></script>
