--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -11,16 +11,17 @@
 	 	<label>
 	 	  Search: <input id="search-text" type="text" placeholder="Filter notes">
 	    </label>
+	    <select id="filter-by">
+	    	<option>Sort by last edited</option>
+	    	<option>Sort by recently created</option>
+	    	<option>Sort alphabetically</option>
+	    </select>
 	 	<div id="notes"></div>
 	 	<button id="create-note">Create Note</button>
 	 	<!-- <form id="name-form">
 	 		<input type="text" placeholder="First name" name="firstName">
 	 		<button>Submit</button>
 	 	</form> -->
-	 	<label>
-	 		<input id="for-fun"  type="checkbox"> Check me for fun
-	 	</label>
-	 	
 	 </body>
 	  <script src="notes-app.js"></script>
 	</html> 
