--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -12,9 +12,9 @@
 	 	  Search: <input id="search-text" type="text" placeholder="Filter notes">
 	    </label>
 	    <select id="filter-by">
-	    	<option>Sort by last edited</option>
-	    	<option>Sort by recently created</option>
-	    	<option>Sort alphabetically</option>
+	    	<option value="byEdited">Sort by last edited</option>
+	    	<option value="byCreated">Sort by recently created</option>
+	    	<option value="alphabetical">Sort alphabetically</option>
 	    </select>
 	 	<div id="notes"></div>
 	 	<button id="create-note">Create Note</button>
