--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -9,10 +9,14 @@
            <input type="checkbox" id="hide-completed"> Hide completed
        </label>   
         <div id="todos"></div>
-        <form id="todo-form">
+        <form id="create-todo">
+            <input type="text" placeholder="Something to do" name="todo">
+            <button>Add Todo</button>
+        </form>
+        <!-- <form id="todo-form">
            <input type="text" placeholder="todo" name="todo">
            <button>Submit</button>
-        </form>
+        </form> -->
         <script src="todo-app.js"></script>
     </body>
 </html>
