--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -23,5 +23,7 @@
 	 		<button>Submit</button>
 	 	</form> -->
 	 </body>
-	  <script src="notes-app.js"></script>
+	 <script src="notes-app.js"></script>
+	 <script src="notes-functions.js"></script>
+	  
 	</html> 
