--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -17,6 +17,8 @@
            <input type="text" placeholder="todo" name="todo">
            <button>Submit</button>
         </form> -->
+        <script src="todo-functions.js"></script>
         <script src="todo-app.js"></script>
     </body>
 </html>
+
