--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -17,8 +17,7 @@
            <input type="text" placeholder="todo" name="todo">
            <button>Submit</button>
         </form> -->
-        
-
+        <script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
         <script src="todo-functions.js"></script>
         <script src="todo-app.js"></script>
     </body>
