--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -4,6 +4,6 @@
 	<head></head>
 	<body>
 	   This is the editing page
-	   <a>My text for the link</a>
+	   <a href="/index.html">My text for the link</a>
 	</body>
 </html>	   
