--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -3,7 +3,9 @@
 <html>
 	<head></head>
 	<body>
-		<script src="notes-function.js"></script>
+	    <input id="note-title" placeholder="Note title">
+	    <textarea id="note-body" placeholder="enter note text"></textarea>
+		<script src="notes-functions.js"></script>
 		<script src="notes-edit.js"></script>
 	</body>
 </html>	   
