--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -5,6 +5,7 @@
 	<body>
 	    <input id="note-title" placeholder="Note title">
 	    <textarea id="note-body" placeholder="enter note text"></textarea>
+	    <button id="remove-note">Remove Note</button>
 		<script src="notes-functions.js"></script>
 		<script src="notes-edit.js"></script>
 	</body>
