--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -23,7 +23,7 @@
 	 		<button>Submit</button>
 	 	</form> -->
 	   <script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
-	   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/"></script>
+	   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment-with-locales.min.js"></script>
 	   <script src="notes-functions.js"></script>	
 	   <script src="notes-app.js"></script>
 	 </body>
