--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -6,7 +6,7 @@
 	    <input id="note-title" placeholder="Note title">
 	    <textarea id="note-body" placeholder="enter note text"></textarea>
 	    <button id="remove-note">Remove Note</button>
-	    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/"></script>
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment-with-locales.min.js"></script>
 		<script src="notes-functions.js"></script>
 		<script src="notes-edit.js"></script>
 	</body>
