--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -4,6 +4,7 @@
 	<head></head>
 	<body>
 	    <input id="note-title" placeholder="Note title">
+	    <span id="last-edited"></span>
 	    <textarea id="note-body" placeholder="enter note text"></textarea>
 	    <button id="remove-note">Remove Note</button>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment-with-locales.min.js"></script>
