--- a/hangman/index.html
+++ b/hangman/index.html
@@ -1,8 +1,8 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 	<head></head>
 	<body>
-	<scriptc src="hangman.js"></scriptc>
+	<script src="hangman.js"></scriptc>
 	</body>
 </html>
