--- a/hangman/index.html
+++ b/hangman/index.html
@@ -3,6 +3,8 @@
 <html>
 	<head></head>
 	<body>
+	    <p id="puzzle"></p>
+		<p id="guesses"></p>
 	<script src="hangman.js"></scriptc>
 	</body>
 </html>
