--- a/hangman/index.html
+++ b/hangman/index.html
@@ -5,8 +5,9 @@
 	<body>
 	    <p id="puzzle"></p>
 		<p id="guesses"></p>
-	<script src="requests.js"></script>	
-	<script src="hangman.js"></script>
-	<script src="app.js"></script>
+		<input type="checkbox"/>
+	    <script src="requests.js"></script>	
+	    <script src="hangman.js"></script>
+	    <script src="app.js"></script>
 	</body>
 </html>
