--- a/hangman/index.html
+++ b/hangman/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 
 <html>
-	<head></head>
+	<head>
+		<Link href="/styles/styles.css" rel="stylesheet">
+	</head>
 	<body>
-	    <p id="puzzle"></p>
-		<p id="guesses"></p>
-		<button id="reset">Reset</button>
+		<div>
+	       <p id="puzzle"></p>
+		   <p id="guesses" class="warning"></p>
+		   <button id="reset" class="warning">Reset</button>
+		</div>
+	    
 	    <script src="/scripts/requests.js"></script>	
 	    <script src="/scripts/hangman.js"></script>
 	    <script src="/scripts/app.js"></script>
