--- a/hangman/index.html
+++ b/hangman/index.html
@@ -2,7 +2,9 @@
 
 <html>
 	<head>
+		<title>Hangman</title>
 		<Link href="/styles/styles.css" rel="stylesheet">
+		<link href="/images/favicon.png" rel="icon">
 	</head>
 	<body>
 		<div>
