--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -22,9 +22,9 @@
 	 		<input type="text" placeholder="First name" name="firstName">
 	 		<button>Submit</button>
 	 	</form> -->
-	   <script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
+	   <script src="/scripts/uuidv4.js"></script>
 	   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment-with-locales.min.js"></script>
-	   <script src="notes-functions.js"></script>	
-	   <script src="notes-app.js"></script>
+	   <script src="/scripts/notes-functions.js"></script>
+	   <script src="/scripts/notes-app.js"></script>
 	 </body>
 </html> 
