--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -4,12 +4,13 @@
 <html>
 	<head></head>
 	<body>
+		<a href="/index.html">Home</a>
 	    <input id="note-title" placeholder="Note title">
 	    <span id="last-edited"></span>
 	    <textarea id="note-body" placeholder="enter note text"></textarea>
 	    <button id="remove-note">Remove Note</button>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment-with-locales.min.js"></script>
-		<script src="notes-functions.js"></script>
-		<script src="notes-edit.js"></script>
+		<script src="/scripts/notes-functions.js"></script>
+		<script src="/scripts/notes-edit.js"></script>
 	</body>
 </html>	   
