--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -2,7 +2,9 @@
 
 
 <html>
-	<head></head>
+	<head>
+		<link href="/styles/styles.css" rel="stylesheet">
+	</head>
 	<body>
 		<a href="/index.html">Home</a>
 	    <input id="note-title" placeholder="Note title">
