--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -18,11 +18,13 @@
 	 			<span id="last-edited"></span>
 	 		</div>	
 	 	</div>
-		
-	    <input id="note-title" placeholder="Note title">
+
+	 	<div class="container">
+	 		<input id="note-title" placeholder="Note title">
+	        <textarea id="note-body" placeholder="enter note text"></textarea>
+	        <button id="remove-note">Remove Note</button>
+	 	</div>
 	    
-	    <textarea id="note-body" placeholder="enter note text"></textarea>
-	    <button id="remove-note">Remove Note</button>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment-with-locales.min.js"></script>
 		<script src="/scripts/notes-functions.js"></script>
 		<script src="/scripts/notes-edit.js"></script>
