--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -20,9 +20,9 @@
 	 	</div>
 
 	 	<div class="container">
-	 		<input id="note-title" placeholder="Note title">
-	        <textarea id="note-body" placeholder="enter note text"></textarea>
-	        <button id="remove-note">Remove Note</button>
+	 		<input id="note-title" class="title-input" placeholder="Note title">
+	        <textarea id="note-body" class="body-input" placeholder="enter note text"></textarea>
+	        <button id="remove-note" class="button">Remove Note</button>
 	 	</div>
 	    
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment-with-locales.min.js"></script>
