--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -22,7 +22,7 @@
 	 	<div class="container">
 	 		<input id="note-title" class="title-input" placeholder="Note title">
 	        <textarea id="note-body" class="body-input" placeholder="enter note text"></textarea>
-	        <button id="remove-note" class="button">Remove Note</button>
+	        <button id="remove-note" class="button button--secondary">Remove Note</button>
 	 	</div>
 	    
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment-with-locales.min.js"></script>
