--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -25,8 +25,10 @@
             </div>
 	 	</div>	
 	 	
-	 	<div id="notes"></div>
-	 	<button id="create-note">Create Note</button>
+	 	<div class="container">
+	 	   <div id="notes"></div>
+	 	   <button id="create-note" class="button">Create Note</button>
+	    </div>
 	 	<!-- <form id="name-form">
 	 		<input type="text" placeholder="First name" name="firstName">
 	 		<button>Submit</button>
