--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -3,6 +3,8 @@
 
 <html>
 	<head>
+		<title>Notes App</title>
+	 	<link href="/images/favicon.png" rel="icon">
 		<link href="/styles/styles.css" rel="stylesheet">
 	</head>
 	<body>
