--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -18,8 +18,9 @@
            <button>Submit</button>
         </form> -->
         <script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
-        <script src="todo-functions.js"></script>
-        <script src="todo-app.js"></script>
+        <script src="/scripts/todo-functions.js"></script>
+        <script src="/scripts/todo-app.js"></script>
+        <script src="/scripts/uuidv4.js"></script>
     </body>
 </html>
 
