--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -26,8 +26,8 @@
         <div class="container">
             <div id="todos"></div>
             <form id="create-todo">
-            <input type="text" placeholder="Something to do" name="todo">
-              <button>Add Todo</button>
+            <input type="text" class="input" placeholder="Something to do" name="todo">
+              <button class="button">Add Todo</button>
             </form>
         </div>
         
